--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -36,9 +36,32 @@
         "/^README\\.md$/"
       ],
       "matchStrings": [
-        "plengauer/Thoth/actions/instrument/deploy@(?<currentValue>[\\w.-]+)"
+        "plengauer/Thoth/actions/instrument/deploy@(?<currentValue>[\\w.-]+)",
+        "plengauer/opentelemetry-github/actions/instrument/deploy@(?<currentValue>[\\w.-]+)"
       ],
       "depNameTemplate": "plengauer/Thoth/actions/instrument/deploy",
+      "datasourceTemplate": "github-tags"
+    },
+    {
+      "customType": "regex",
+      "managerFilePatterns": [
+        "/^README\\.md$/"
+      ],
+      "matchStrings": [
+        "plengauer/opentelemetry-github/actions/instrument/workflow@(?<currentValue>[\\w.-]+)"
+      ],
+      "depNameTemplate": "plengauer/Thoth/actions/instrument/workflow",
+      "datasourceTemplate": "github-tags"
+    },
+    {
+      "customType": "regex",
+      "managerFilePatterns": [
+        "/^README\\.md$/"
+      ],
+      "matchStrings": [
+        "plengauer/opentelemetry-github/actions/instrument/job@(?<currentValue>[\\w.-]+)"
+      ],
+      "depNameTemplate": "plengauer/Thoth/actions/instrument/job",
       "datasourceTemplate": "github-tags"
     }
   ]
